--- a/css/styles.css
+++ b/css/styles.css
@@ -48,6 +48,10 @@ body{
 
 
 /*--------- index -----------*/
+.container{
+    width: 1200px;
+    
+}
 
 .link:hover,
 .link:focus{
@@ -82,6 +86,7 @@ letter-spacing: 0.06em;
 text-transform: uppercase;
 
 color: var(--white-text);
+
 }
 .hero-button {
     font-weight: 700;
