--- a/css/styles.css
+++ b/css/styles.css
@@ -125,13 +125,18 @@ background-color: var(--hero-btncolor);
 color: var(--white-text);
 width: 200px;
 height: 50px;
+border: 0;
 border-radius: 4px;
 box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 .section {
     background-color: var(--main-background);
     padding-bottom: 94px;
+    padding-top: 94px;
 }
+
+
+
 .section-team{
     background: var(--team-backround);
     padding-top: 94px;
@@ -150,7 +155,7 @@ margin-bottom: 50px;
 .features-text{
     display: flex;
     
-    margin-top: 94px;
+   
    
 }
 .features-text li{
@@ -242,6 +247,9 @@ flex-basis: calc(100% / 4 - 30px);
 margin-left: 30px;
 }
 .our-member{
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 0px 0px 4px 4px;
+
 
 }
 .footer-nav{
@@ -263,6 +271,8 @@ display: flex;
 }
 .site-nav{
     display: flex;
+    margin-right: 331px;
+    
 }
 .main-nav{
     display: flex;
@@ -270,7 +280,9 @@ display: flex;
 .contacts-nav{
     display: flex;
     
+    
 }
+
 .site-nav li:not(:last-child){
     margin-right: 50px;
 }
@@ -278,17 +290,17 @@ display: flex;
     display: block;
     padding-top: 32px;
     padding-bottom: 32px;
+    
 
 }
 .contacts-nav li{
     display: block;
-    padding-top: 32px;
-    padding-bottom: 32px;
+   
     
 }
 .contacts-nav li:not(:last-child){
     margin-right: 50px;
-    margin-left: auto;
+   
 }
 
 
@@ -304,6 +316,17 @@ display: flex;
     margin-right: 93px;
     padding-top: 24px;
     padding-bottom: 25px;
+   
+}
+.logo-footer{
+    font-family: 'Raleway';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 26px;
+    line-height: 1.19;
+    /* identical to box height */
+    
+   margin-bottom: 20px;
    
 }
 .logo-blue {
@@ -342,7 +365,7 @@ display: flex;
 .header-contacts a:not(:last-child){
     margin-right: 50px;
 }
-.header-contacts a{
+.header-contacts{
     display: block;
     padding-top: 32px;
     padding-bottom: 32px;
@@ -382,6 +405,12 @@ display: block;
 border-radius: 4px;
 border-color: transparent;
 background-color: var(--team-backround);
+height: 38px;
+padding: 6px 22px 6px 22px;
+}
+.button-selected{
+color: var(--white-text);
+background-color: var(--accent-color);
 }
 
 
@@ -395,6 +424,9 @@ background-color: var(--team-backround);
     background-color: var(--main-background);
    
     background-color: var(--portfolio-item);
+    padding: 20px 24px 20px 24px;
+    border: 1px solid var(--border-two);
+    box-sizing: border-box;
     
 }
 
@@ -412,8 +444,7 @@ background-color: var(--team-backround);
     margin-top: 30px;
 }
 .portfolio-item{
-    border: 1px solid var(--border-two);
-box-sizing: border-box;
+    
 }
 
 .portfolio-img{
@@ -443,9 +474,8 @@ line-height: 2;
 letter-spacing: 0.06em;
 
 color: var(--title-name);
-margin-top: 20px;
-padding-left: 24px;
-padding-right: 24px;
+margin-bottom: 4px;
+
 
 }
 .portfolio-item-text {
@@ -457,10 +487,8 @@ line-height: 1.88;
 letter-spacing: 0.03em;
 
 color: var(--title-text);
-margin-top: 4px;
-padding-left: 24px;
-padding-right: 24px;
-padding-bottom: 20px;
+
+
 }
 .footer {
     background: var(--footer-color);
